--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -31,7 +31,8 @@ body {
       font-family: Arial;
       text-transform: capitalize;
       color: #fff;
-      font-size: 18px;
+      font-size: 25px;
+      text-align: center;
       margin-top: 50px;
       border: 1px solid #fff;
       padding: 20px;
